[package]
name = "wyrd-core"
description = "Combined client/protocol logic (coarse at M0; split as boundaries firm up — ADR-0016). Stub at M0.1."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# The read path's fragment-fault audit plane (#530). `tracing` is runtime-agnostic — no
# tokio, no executor — so core stays free of a runtime dependency (ADR-0009). The events
# are inert unless a role installs a subscriber (#527); core never installs one.
tracing.workspace = true
wyrd-traits.workspace = true
wyrd-chunk-format.workspace = true
bytes.workspace = true
futures-util.workspace = true
reed-solomon-simd.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# The fragment-fault audit tests assert on what the read path ACTUALLY emitted (#530) — a
# capturing `fmt` layer is the only way to prove the D-server id reaches a sink.
tracing-subscriber.workspace = true
# Seeded property tests reuse the deterministic simulator (ADR-0009).
wyrd-testkit.workspace = true
# Drives the async write/read path in tests without a runtime tie-in.
pollster.workspace = true
# Implement the ChunkStore trait for an in-test fault-injecting fake.
async-trait.workspace = true
# EC throughput micro-benchmarks (M1.7, `cargo xtask bench`).
criterion.workspace = true
# The aggregate write/read throughput bench (M2.7, `benches/throughput.rs`) drives
# the data path over real, in-process tonic gRPC D servers across D-server counts.
# These are the same concretes `server` composes — named only here, in a
# test/bench target (ADR-0010 lets the composition layer name concretes).
wyrd-chunkstore-grpc.workspace = true
wyrd-chunkstore-fs.workspace = true
# The placement-record regression (tests/placement_record.rs) reopens a persisted
# redb metadata store to prove the record survives a process restart (M3.1, #139).
wyrd-metadata-redb.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tempfile.workspace = true

[[bench]]
name = "erasure"
harness = false

[[bench]]
name = "throughput"
harness = false

# Inherit the workspace lint policy (single source of truth in the root
# Cargo.toml [workspace.lints.*]).
[lints]
workspace = true
