[package]
name = "wyrd-custodian"
description = "The single-active, fenced maintenance plane (L4): leader-elected custodian, failure-domain-aware placement, and the backend-agnostic durability-telemetry seam (M3, proposal 0005)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# The pluggability seams only — never a concrete backend (ADR-0010, 0005:421-422).
# `proto` (the maintenance-RPC seam) is added by the loop slices (4–7) that walk
# stores over `list_fragments`/`delete_fragment`; the M3.3 skeleton wires only the
# leadership fence, the selector (in `core`), and the telemetry seam.
wyrd-traits.workspace = true
wyrd-core.workspace = true
# The loops emit durability telemetry through `tracing` (ADR-0011 telemetry-from-
# first-commit). The backend-agnostic OTel export seam itself lives in the shared
# `wyrd-telemetry` crate (observability floor, proposal 0010 item 1) — extracted so
# no leaf crate anchors it (ADR-0012, ADR-0010) — and is re-exported here for the M3
# consumers that already name `DurabilityTelemetry`/`ExporterConfig`.
tracing.workspace = true
wyrd-telemetry.workspace = true

[dev-dependencies]
# The telemetry read-back tests install the metrics bridge on a `tracing` subscriber
# (`tracing_subscriber::registry().with(telemetry.metrics_layer())`); the OTel/
# Prometheus export deps are the `wyrd-telemetry` crate's concern, not custodian's.
tracing-subscriber.workspace = true
# In-memory coordination concrete to exercise leader election + fencing in-process
# (a test/dev composition may name a concrete — ADR-0010).
wyrd-coordination-mem.workspace = true
wyrd-testkit.workspace = true
tokio.workspace = true
# In-memory trait stores for the GC loop's in-process test (the loop is proven over
# the `MetadataStore`/`ChunkStore` seams, backend-agnostic).
async-trait.workspace = true
bytes.workspace = true
# The scrub loop's test injects a bit-flip into a real v1 fragment to prove the
# checksum verify is load-bearing; it builds the fragment with the on-disk-format
# writer. Test-only — the scrub loop itself borrows `core`'s verify and gains no
# chunk-format dependency (ADR-0010).
wyrd-chunk-format.workspace = true
# The verifying-backend scrub test drives the loop over the REAL on-disk D server
# (`FsChunkStore`), whose `get_fragment` rejects a corrupt fragment with an
# `IntegrityFault` instead of returning bytes — the backend whose silent-abort bug
# this exercises end-to-end. A test/dev composition may name a concrete (ADR-0010);
# the scrub loop itself still depends only on the trait seam.
wyrd-chunkstore-fs.workspace = true
tempfile.workspace = true

# Inherit the workspace lint policy (single source of truth).
[lints]
workspace = true
