[package]
name = "wyrd-dst"
description = "Deterministic-simulation tests on madsim: the commit protocol under a seed-reproducible task scheduler (ADR-0009). Test-only; run with `cargo xtask dst`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

# The DST determinism barrier (ADR-0035) lives in `src/lib.rs`, so `tracing` /
# `tracing-subscriber` are normal deps of this (test-only, unpublished) crate, not
# dev-deps: the barrier installs the permissive global default that the campaign's
# per-callsite interest cache depends on, and the campaign tests reuse them.
[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
madsim.workspace = true
wyrd-core.workspace = true
wyrd-traits.workspace = true
wyrd-metadata-redb.workspace = true
wyrd-chunkstore-fs.workspace = true
tempfile.workspace = true
# M2.6 network DST (tests/network.rs): the real gRPC ChunkStore over madsim's
# simulated network. `chunkstore-grpc` carries the client + D-server service;
# `chunk-format` builds/inspects fragments; `testkit` is the network-fault seam.
wyrd-chunkstore-grpc.workspace = true
wyrd-chunk-format.workspace = true
wyrd-testkit.workspace = true
bytes.workspace = true
async-trait.workspace = true
# Seed-derived fault selection (which D-server links to drop/corrupt), reproduced
# from the madsim run seed so a bug-finding seed replays the same faults.
rand.workspace = true
rand_chacha.workspace = true
# M3.8 custodian property campaign (tests/custodian.rs): the four custodian loops
# driven through the real `reconcile_step` fenced control point over in-memory trait
# stores, under the simulator. `custodian` carries the loops + the durability-plane
# telemetry seam; `coordination-mem` provides leader election + the fencing token.
# (`tracing`/`tracing-subscriber` are normal deps above — the ADR-0035 barrier needs
# them in the lib, and the campaign reuses them for in-process metric read-back.)
wyrd-custodian.workspace = true
wyrd-coordination-mem.workspace = true

# `wyrd-dst` compiles *only* under `--cfg madsim`, so its gRPC transport is
# always madsim-tonic (aliased as `tonic`) — the same alias `proto` and
# `chunkstore-grpc` use, so `Server::builder().serve(addr)` runs on the
# simulated network (proposal 0004 Tier-1; ADR-0009).
[target.'cfg(madsim)'.dev-dependencies]
tonic = { package = "madsim-tonic", version = "0.6.0", default-features = false }
# The etcd-backed Coordination (#365) + the shared contract suite, driven on the
# madsim etcd simulator (`tests/coordination.rs`). `coordination-etcd`'s store
# compiles here because `--cfg madsim` aliases its `etcd-client` to
# `madsim-etcd-client`; this is the deterministic, protoc-free proof of the etcd
# backend's distributed correctness (ADR-0009; the #264/#258 DST-fidelity mirror).
wyrd-coordination-etcd.workspace = true
wyrd-coordination-conformance.workspace = true
# The in-simulator etcd server the coordination campaign stands up; aliased so
# `SimServer` resolves under the same `etcd_client` path the store uses.
etcd-client = { package = "madsim-etcd-client", version = "0.6.0" }
# madsim-tokio hosts the store's keep-alive spawn/time on the simulated runtime.
tokio = { package = "madsim-tokio", version = "0.2.30", features = [
    "rt",
    "time",
    "sync",
    "macros",
] }

# Inherit the workspace lint policy (single source of truth in the root
# Cargo.toml [workspace.lints.*]).
[lints]
workspace = true
