[package]
name = "wyrd-metadata-conformance"
description = "The shared MetadataStore trait-contract suite (ADR-0008): backend-agnostic get/scan/commit assertions, driven by every concrete backend's test target so the trait is pinned by both implementations, not forked (proposal 0007, M4.1)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# The suite is written against the trait surface ONLY (ADR-0016 dependency rule):
# it never depends on a concrete backend, so `metadata-redb`, `metadata-tikv` and
# `metadata-fdb` can drive the identical assertions.
wyrd-traits.workspace = true
# `contract_blind_batch_is_never_conflict` (#437) has to drive TWO commits that
# genuinely overlap — a blind batch can only *lose a race* concurrently, and the
# race is the half of the clause a sequential interleaving cannot reach. This is
# a combinator over the trait's own futures, not a backend dependency.
futures-util.workspace = true

[dev-dependencies]
# `tests/demonstrated_red.rs` (#419) implements deliberately-violating
# `MetadataStore` stubs in-crate, dev-scope only (never shipped, never a real
# backend — see the #419 brief's "Violating-store test double" NEEDS-HUMAN
# note) to prove the three read-consistency properties are load-bearing.
async-trait.workspace = true
bytes.workspace = true
pollster.workspace = true

# Inherit the workspace lint policy (single source of truth in the root
# Cargo.toml [workspace.lints.*]).
[lints]
workspace = true
