[package]
name = "wyrd-metadata-redb"
description = "redb-backed MetadataStore implementation: embedded, pure-Rust, single-process (ADR-0008). Concrete backend wired in by `server`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
wyrd-traits.workspace = true
async-trait.workspace = true
bytes.workspace = true
redb.workspace = true

[dev-dependencies]
# The conformance/property tests exercise the model (core) against a real redb
# store, driven by pollster (sync redb never yields) and seeded by testkit.
# The generic trait-contract assertions come from the SHARED suite both backends
# drive (proposal 0007, M4.1) — not a redb-local fork.
wyrd-core.workspace = true
wyrd-metadata-conformance.workspace = true
wyrd-testkit.workspace = true
pollster.workspace = true

# Inherit the workspace lint policy (single source of truth in the root
# Cargo.toml [workspace.lints.*]).
[lints]
workspace = true
