[package]
name = "wyrd-server"
description = "The Wyrd single binary and S3 gateway: the one crate that wires concrete backends behind the trait seams (ADR-0010)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "wyrd"
path = "src/main.rs"

[features]
# OFF by default (ADR-0014: redb is the dev/single-binary default). The `tikv`
# feature composes the production TiKV metadata backend behind the unchanged
# `MetadataStore` seam; it forwards to `metadata-tikv`'s own OFF-by-default `tikv`
# feature (mirror of metadata-tikv/Cargo.toml:11-20), so the DEFAULT build never
# pulls the pre-1.0 `tikv-client` tree and `cargo xtask ci` / `cargo deny` stay
# green with no TiKV. The tikv selection arm in `cli.rs` is itself `#[cfg]`-gated,
# so it is compiled OUT of the default Check build (proposal 0015 slice 4).
default = []
tikv = ["dep:wyrd-metadata-tikv", "wyrd-metadata-tikv/tikv"]

[dependencies]
# `server` is the one crate that knows concretes (ADR-0010): it wires the redb
# metadata store, the filesystem chunk store, and the in-memory coordination
# behind the trait seams.
wyrd-core.workspace = true
wyrd-traits.workspace = true
wyrd-metadata-redb.workspace = true
# The production metadata backend, wired only under the OFF-by-default `tikv`
# feature above — optional so the default build never compiles the tikv tree.
wyrd-metadata-tikv = { workspace = true, optional = true }
wyrd-chunkstore-fs.workspace = true
# The networked-storage profile: the gRPC ChunkStore client/server (M2.2) and the
# tokio runtime that hosts the `d-server` role. tokio is a server-binary host
# detail; Wyrd's core stays runtime-agnostic (ADR-0009).
wyrd-chunkstore-grpc.workspace = true
wyrd-coordination-mem.workspace = true
bytes.workspace = true
pollster.workspace = true
# The D-server registration record (`{ id, endpoint, failure-domain label }`,
# proposal 0005 "The placement record") is serialized into the coordination value.
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
# The transport that hosts the gRPC ChunkStore service for the `d-server` role.
tonic.workspace = true
# Tower middleware for the d-server's fail-closed admission control (issue #205,
# architecture §8.9): a server-wide concurrency bound + load-shedding applied to
# the tonic service stack via `Server::layer`.
tower.workspace = true

[dev-dependencies]
wyrd-chunk-format.workspace = true
wyrd-testkit.workspace = true
tempfile.workspace = true
# `test-util` adds the `start_paused` virtual clock so the alloc_inode budget test
# auto-advances through its backoff sleeps instead of waiting the real budget.
# Dev-only — dev-dependencies are not compiled into the production binary, so the
# runtime tokio feature set is unchanged.
tokio = { workspace = true, features = ["test-util"] }
# A fault-injecting ChunkStore fake (a hanging/down D server) for the any-k read
# fan-out test (M2.5).
async-trait.workspace = true

# Inherit the workspace lint policy (single source of truth in the root
# Cargo.toml [workspace.lints.*]).
[lints]
workspace = true
